[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/dynamic_font/GenericFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/battle/BattleManager.gd" type="Script" id=2]
[ext_resource path="res://scripts/BattleCameraRigController.gd" type="Script" id=3]
[ext_resource path="res://scripts/BattleCameraController.gd" type="Script" id=4]
[ext_resource path="res://prefabs/Card.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/UIController.gd" type="Script" id=6]
[ext_resource path="res://audio/music/battle_critical_raw.ogg" type="AudioStream" id=7]
[ext_resource path="res://scripts/battle/BattleArenaManager.gd" type="Script" id=8]
[ext_resource path="res://scripts/battle/BattleSelectManager.gd" type="Script" id=9]
[ext_resource path="res://scripts/GameManager.gd" type="Script" id=10]
[ext_resource path="res://scripts/CardParentController.gd" type="Script" id=11]

[node name="Level" type="Spatial"]

[node name="GameManager" type="Spatial" parent="."]
script = ExtResource( 10 )

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileInfo" type="Label" parent="GUI"]
margin_right = 984.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "Tile Info"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardInfo" type="Label" parent="GUI"]
margin_right = 984.0
margin_bottom = 22.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Unit Info"
align = 2
script = ExtResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 7, 9 )
light_color = Color( 1, 1, 0.980392, 1 )
light_energy = 0.5
shadow_enabled = true
shadow_color = Color( 0, 0, 0.0392157, 1 )
shadow_bias = 0.0

[node name="Camera" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.93617, 3.27126 )
script = ExtResource( 3 )

[node name="Cam" type="Camera" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 0.950846, 0.309664, 0, -0.309664, 0.950846, -0.131841, 0.571277, 2.26505 )
current = true
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Camera/Cam"]

[node name="Tween" type="Tween" parent="Camera"]

[node name="BattleManager" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="ArenaManager" type="Spatial" parent="BattleManager"]
script = ExtResource( 8 )

[node name="SelectManager" type="Spatial" parent="BattleManager"]
script = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BattleManager"]
stream = ExtResource( 7 )

[node name="Parents" type="Spatial" parent="."]

[node name="UnitParent" type="Spatial" parent="Parents"]

[node name="TileParent" type="Spatial" parent="Parents"]

[node name="CardParent" type="Node2D" parent="."]
position = Vector2( 486.973, 492.602 )
script = ExtResource( 11 )

[node name="CardUI" parent="CardParent" instance=ExtResource( 5 )]
margin_left = -2.1416
margin_top = -25.3984
margin_right = 97.8584
margin_bottom = 104.602
